--- a/requirements.txt
+++ b/requirements.txt
@@ -24,15 +24,19 @@ numpy==2.2.5
 packaging==24.2
 pandas==2.2.3
 pillow==11.2.1
+plotly==6.0.1
 protobuf==5.29.4
+psutil==7.0.0
 pyarrow==19.0.1
 pydeck==0.9.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+pythonping==1.1.4
 pytz==2025.2
 referencing==0.36.2
 requests==2.32.3
 rpds-py==0.24.0
+scapy==2.6.1
 scikit-learn==1.6.1
 scipy==1.15.2
 six==1.17.0
